zig/pkg/antfly/include/antfly.h

typedef enum antfly_error_code {
    ANTFLY_OK = 0,
    ANTFLY_INVALID_ARGUMENT = 1,
    ANTFLY_NOT_FOUND = 2,
    ANTFLY_VERSION_CONFLICT = 3,
    ANTFLY_INTENT_CONFLICT = 4,
    ANTFLY_TXN_NOT_FOUND = 5,
    ANTFLY_BUSY = 6,
    /* The operation crossed its publication point, but crash durability could
     * not be confirmed. Inspect the destination; do not retry automatically. */
    ANTFLY_OUTCOME_UNKNOWN = 7,
    /* The operation requires a capability unavailable on this platform or
     * filesystem. Retrying unchanged will not succeed. */
    ANTFLY_UNSUPPORTED = 8,
    /* A bounded drain such as run-until-idle found a managed index making no
     * forward progress for its stall window and gave up. */
    ANTFLY_STALLED = 9,
    /* The caller cancelled the call by returning false from its progress or
     * stream callback. */
    ANTFLY_CANCELLED = 10,
    ANTFLY_INTERNAL = 255,
} antfly_error_code;
/*
 * C ABI conventions:
 *
 * - Functions return ANTFLY_OK on success. Any other antfly_error_code is an
 *   error and should be handled with the stable strings returned by
 *   antfly_error_code_name and antfly_error_code_description.
 * - ANTFLY_OUTCOME_UNKNOWN is not safe to retry automatically: publication
 *   completed in the running process, but crash durability was not confirmed.
 *   Inspect the caller-supplied destination before deciding how to proceed.
 * - ANTFLY_UNSUPPORTED is not transient. For file restore operations it can
 *   mean the source filesystem lacks required advisory locking; copy the
 *   archive to a supported local filesystem before retrying.
 * - antfly_slice is borrowed input. The caller owns the memory and must keep it
 *   valid for the duration of the call.
 * - antfly_buffer is owned output. On success, the caller owns the returned
 *   memory and must release it with antfly_buffer_free, or
 *   antfly_buffer_free_zero when the bytes may contain sensitive data.
 * - Status, maintenance, backup, restore, check, and snapshot calls reset
 *   antfly_buffer outputs to {NULL, 0} before validating arguments. Other
 *   buffer-returning calls require a valid output pointer and only transfer
 *   ownership after ANTFLY_OK.
 * - antfly_db handles are owned by the caller after a successful open and
 *   must be closed with antfly_db_close. Closing NULL, an already closed
 *   handle, or a handle closed concurrently is allowed.
 * - Search result structs own nested allocations only after ANTFLY_OK and must
 *   be released with their matching *_free function.
 *
 * Naming: antfly_* functions are library-level and take no database handle;
 * antfly_db_* functions take an antfly_db handle of any storage kind;
 * antfly_lite_* functions operate on the .aflite single-file format itself,
 * plus shortcuts for opening one; antfly_inference_* functions take an
 * antfly_inference handle and run inference without a database.
 */

/* An open database. Opaque; see antfly_db_open_with_options. */
typedef struct antfly_db antfly_db;
typedef struct antfly_slice {
    const uint8_t *ptr;
    size_t len;
} antfly_slice;
typedef struct antfly_buffer {
    uint8_t *ptr;
    size_t len;
} antfly_buffer;
typedef struct antfly_open_options {
    uint32_t abi_size;
    uint32_t storage_kind;
    uint32_t open_mode;
    uint32_t profile;
    uint32_t flags;
    uint32_t reserved0;
    uint64_t map_size;
    bool ttl_cleanup_enabled;
    bool ttl_cleanup_lease_owned;
    uint32_t ttl_cleanup_batch_size;
    antfly_slice ttl_cleanup_owner_id;
    uint64_t ttl_cleanup_lease_ttl_ms;
    uint64_t ttl_cleanup_interval_ms;
    uint64_t ttl_cleanup_grace_period_ns;
    /* Explicit embedded-inference resource-budget overrides in MiB, 0
     * meaning automatic/host-detected sizing. Only consulted when `flags`
     * carries ANTFLY_OPEN_FLAG_LOCAL_RUNTIME_CONFIGURED; mirror the antfly
     * CLI's --inference-host-budget-mb/--inference-backend-budget-mb/
     * --process-memory-budget-mb. */
    uint32_t inference_host_budget_mb;
    uint32_t inference_backend_budget_mb;
    uint32_t inference_process_memory_budget_mb;
    uint32_t inference_combined_budget_mb;
    uint32_t inference_kv_budget_mb;
    uint32_t inference_scratch_budget_mb;
    /* Milliseconds to keep retrying while another writer holds the writer
     * lock (ANTFLY_BUSY), like sqlite3_busy_timeout. 0 fails immediately. */
    uint64_t busy_timeout_ms;
    uint64_t reserved[8];
} antfly_open_options;
typedef struct antfly_version_predicate {
    antfly_slice key;
    uint64_t expected_version;
} antfly_version_predicate;
typedef struct antfly_dense_search_hit {
    uint8_t *id_ptr;
    size_t id_len;
    float score;
} antfly_dense_search_hit;
typedef struct antfly_dense_search_result {
    antfly_dense_search_hit *hits_ptr;
    size_t hit_count;
    uint32_t total_hits;
    uint64_t identity_read_generation;
} antfly_dense_search_result;
typedef struct antfly_packed_dense_search_hit {
    size_t id_offset;
    size_t id_len;
    float score;
} antfly_packed_dense_search_hit;
typedef struct antfly_packed_dense_search_result {
    antfly_packed_dense_search_hit *hits_ptr;
    size_t hit_count;
    uint32_t total_hits;
    uint8_t *ids_ptr;
    size_t ids_len;
    uint64_t identity_read_generation;
} antfly_packed_dense_search_result;
typedef struct antfly_dense_search_profile {
    uint64_t total_ns;
    uint64_t index_lookup_ns;
    uint64_t search_ns;
    uint64_t hits_ns;
    uint64_t fallback_ns;
    uint64_t hbc_total_ns;
    uint64_t hbc_setup_ns;
    uint64_t hbc_root_load_ns;
    uint64_t hbc_node_cache_miss_ns;
    uint64_t hbc_node_cache_misses;
    uint64_t hbc_quantized_cache_miss_ns;
    uint64_t hbc_quantized_cache_misses;
    uint64_t hbc_child_expand_ns;
    uint64_t hbc_leaf_score_ns;
    uint64_t hbc_rerank_ns;
    uint64_t hbc_rerank_vector_load_ns;
    uint64_t hbc_rerank_distance_ns;
    uint64_t hbc_nodes_visited;
    uint64_t hbc_leaves_explored;
    uint64_t hbc_reranked_vectors;
    uint32_t hit_count;
    uint32_t total_hits;
    bool used_fast_path;
} antfly_dense_search_profile;
typedef struct antfly_dense_wire_search_profile {
    uint64_t total_ns;
    uint64_t decode_ns;
    uint64_t search_ns;
    uint64_t resolve_ns;
    uint64_t encode_ns;
    uint64_t fallback_ns;
    uint64_t hbc_total_ns;
    uint64_t hbc_setup_ns;
    uint64_t hbc_root_load_ns;
    uint64_t hbc_node_cache_miss_ns;
    uint64_t hbc_node_cache_misses;
    uint64_t hbc_quantized_cache_miss_ns;
    uint64_t hbc_quantized_cache_misses;
    uint64_t hbc_child_expand_ns;
    uint64_t hbc_leaf_score_ns;
    uint64_t hbc_rerank_ns;
    uint64_t hbc_rerank_vector_load_ns;
    uint64_t hbc_rerank_distance_ns;
    uint64_t hbc_nodes_visited;
    uint64_t hbc_leaves_explored;
    uint64_t hbc_reranked_vectors;
    uint32_t hit_count;
    uint32_t total_hits;
    bool used_fast_path;
} antfly_dense_wire_search_profile;
typedef struct antfly_scan_hash_entry {
    uint8_t *id_ptr;
    size_t id_len;
    uint64_t hash;
} antfly_scan_hash_entry;
typedef struct antfly_scan_hash_result {
    antfly_scan_hash_entry *entries_ptr;
    size_t entry_count;
} antfly_scan_hash_result;
uint32_t antfly_abi_version(void);
uint32_t antfly_open_options_size(void);
const char *antfly_error_code_name(antfly_error_code code);
const char *antfly_error_code_description(antfly_error_code code);
antfly_error_code antfly_open_options_init(antfly_open_options *options);
uint32_t antfly_threading_mode(void);
/*
 * Storage-neutral opens. ANTFLY_STORAGE_KIND_DIRECTORY opens a normal
 * single-node Antfly directory; ANTFLY_STORAGE_KIND_LITE opens a .aflite
 * single-file database. antfly_db_create_with_options has exclusive-create
 * semantics for ANTFLY_STORAGE_KIND_LITE; directory storage is opened (and
 * created if missing) with antfly_db_open_with_options. NULL options open
 * directory storage with defaults.
 */
antfly_error_code antfly_db_open(const char *path, antfly_db **out_db);
antfly_error_code antfly_db_open_with_options(
    const char *path,
    const antfly_open_options *options,
    antfly_db **out_db
);
antfly_error_code antfly_db_create_with_options(
    const char *path,
    const antfly_open_options *options,
    antfly_db **out_db
);
void antfly_db_close(antfly_db *db);
/*
 * Shortcuts for ANTFLY_STORAGE_KIND_LITE with default options.
 * antfly_lite_create* creates a new .aflite database; antfly_lite_open*
 * opens an existing one and never creates a missing file or migrates a
 * pre-release layout.
 */
antfly_error_code antfly_lite_open(const char *path, antfly_db **out_db);
antfly_error_code antfly_lite_create(const char *path, antfly_db **out_db);
antfly_error_code antfly_lite_open_hosted(const char *path, antfly_db **out_db);
antfly_error_code antfly_lite_create_hosted(const char *path, antfly_db **out_db);
antfly_error_code antfly_lite_open_readonly(const char *path, antfly_db **out_db);
antfly_error_code antfly_lite_open_status_only(const char *path, antfly_db **out_db);
/* Storage identity, stats, pending work, inference state, and capabilities. */
antfly_error_code antfly_db_status_json(antfly_db *db, antfly_buffer *out);
antfly_error_code antfly_db_capabilities_json(antfly_db *db, antfly_buffer *out);
/*
 * Portable .afb backups work across storage kinds: a backup of either kind
 * restores or imports into either kind. antfly_db_import_backup requires an
 * empty database. antfly_restore_backup_json and
 * antfly_restore_backup_file_json create a new database at dest_path whose
 * storage kind comes from `options` (NULL means directory storage); other
 * option fields apply when the restored database is opened. `replace`
 * atomically replaces an existing destination.
 */
antfly_error_code antfly_db_backup(antfly_db *db, antfly_buffer *out);
antfly_error_code antfly_db_import_backup(antfly_db *db, antfly_slice backup);
antfly_error_code antfly_restore_backup_json(
    const char *dest_path,
    const antfly_open_options *options,
    antfly_slice backup,
    bool replace,
    antfly_buffer *out
);
antfly_error_code antfly_restore_backup_file_json(
    const char *dest_path,
    const antfly_open_options *options,
    const char *backup_path,
    bool replace,
    antfly_buffer *out
);
/* Operations on the .aflite file format. */
antfly_error_code antfly_lite_check_json(antfly_db *db, antfly_buffer *out);
antfly_error_code antfly_lite_check_file_json(const char *path, antfly_buffer *out);
antfly_error_code antfly_lite_copy_stable_snapshot_json(
    antfly_db *db,
    const char *dest_path,
    bool replace,
    antfly_buffer *out
);
antfly_error_code antfly_lite_copy_stable_snapshot_file_json(
    const char *src_path,
    const char *dest_path,
    bool replace,
    antfly_buffer *out
);
antfly_error_code antfly_lite_compact_json(antfly_db *db, antfly_buffer *out);
antfly_error_code antfly_lite_vacuum_json(antfly_db *db, antfly_buffer *out);
void antfly_buffer_free(antfly_buffer *buffer);
void antfly_buffer_free_zero(antfly_buffer *buffer);
void antfly_dense_search_result_free(antfly_dense_search_result *result);
void antfly_packed_dense_search_result_free(antfly_packed_dense_search_result *result);
void antfly_scan_hash_result_free(antfly_scan_hash_result *result);