rs/crates/lite-sys/src/lib.rs


#[repr(C)]
#[derive(Copy, Clone, Debug)]
pub struct antfly_version_predicate {
    pub key: antfly_slice,
    pub expected_version: u64,
}

#[repr(C)]
#[derive(Copy, Clone, Debug)]
pub struct antfly_dense_search_hit {
    pub id_ptr: *mut u8,
    pub id_len: usize,
    pub score: f32,
}

#[repr(C)]
#[derive(Copy, Clone, Debug)]
pub struct antfly_dense_search_result {
    pub hits_ptr: *mut antfly_dense_search_hit,
    pub hit_count: usize,
    pub total_hits: u32,
    pub identity_read_generation: u64,
}

impl Default for antfly_dense_search_result {
    fn default() -> Self {
        antfly_dense_search_result {
            hits_ptr: std::ptr::null_mut(),
            hit_count: 0,
            total_hits: 0,
            identity_read_generation: 0,
        }
    }
}

#[repr(C)]
#[derive(Copy, Clone, Debug)]
pub struct antfly_packed_dense_search_hit {
    pub id_offset: usize,
    pub id_len: usize,
    pub score: f32,
}

#[repr(C)]
#[derive(Copy, Clone, Debug)]
pub struct antfly_packed_dense_search_result {
    pub hits_ptr: *mut antfly_packed_dense_search_hit,
    pub hit_count: usize,
    pub total_hits: u32,
    pub ids_ptr: *mut u8,
    pub ids_len: usize,
    pub identity_read_generation: u64,
}

impl Default for antfly_packed_dense_search_result {
    fn default() -> Self {
        antfly_packed_dense_search_result {
            hits_ptr: std::ptr::null_mut(),
            hit_count: 0,
            total_hits: 0,
            ids_ptr: std::ptr::null_mut(),
            ids_len: 0,
            identity_read_generation: 0,
        }
    }
}

#[repr(C)]
#[derive(Copy, Clone, Debug, Default)]
pub struct antfly_dense_search_profile {
    pub total_ns: u64,
    pub index_lookup_ns: u64,
    pub search_ns: u64,
    pub hits_ns: u64,
    pub fallback_ns: u64,
    pub hbc_total_ns: u64,
    pub hbc_setup_ns: u64,
    pub hbc_root_load_ns: u64,
    pub hbc_node_cache_miss_ns: u64,
    pub hbc_node_cache_misses: u64,
    pub hbc_quantized_cache_miss_ns: u64,
    pub hbc_quantized_cache_misses: u64,
    pub hbc_child_expand_ns: u64,
    pub hbc_leaf_score_ns: u64,
    pub hbc_rerank_ns: u64,
    pub hbc_rerank_vector_load_ns: u64,
    pub hbc_rerank_distance_ns: u64,
    pub hbc_nodes_visited: u64,
    pub hbc_leaves_explored: u64,
    pub hbc_reranked_vectors: u64,
    pub hit_count: u32,
    pub total_hits: u32,
    pub used_fast_path: bool,
}

#[repr(C)]
#[derive(Copy, Clone, Debug, Default)]
pub struct antfly_dense_wire_search_profile {
    pub total_ns: u64,
    pub decode_ns: u64,
    pub search_ns: u64,
    pub resolve_ns: u64,
    pub encode_ns: u64,
    pub fallback_ns: u64,
    pub hbc_total_ns: u64,
    pub hbc_setup_ns: u64,
    pub hbc_root_load_ns: u64,
    pub hbc_node_cache_miss_ns: u64,
    pub hbc_node_cache_misses: u64,
    pub hbc_quantized_cache_miss_ns: u64,
    pub hbc_quantized_cache_misses: u64,
    pub hbc_child_expand_ns: u64,
    pub hbc_leaf_score_ns: u64,
    pub hbc_rerank_ns: u64,
    pub hbc_rerank_vector_load_ns: u64,
    pub hbc_rerank_distance_ns: u64,
    pub hbc_nodes_visited: u64,
    pub hbc_leaves_explored: u64,
    pub hbc_reranked_vectors: u64,
    pub hit_count: u32,
    pub total_hits: u32,
    pub used_fast_path: bool,
}

#[repr(C)]
#[derive(Copy, Clone, Debug)]
pub struct antfly_scan_hash_entry {
    pub id_ptr: *mut u8,
    pub id_len: usize,
    pub hash: u64,
}

#[repr(C)]
#[derive(Copy, Clone, Debug)]
pub struct antfly_scan_hash_result {
    pub entries_ptr: *mut antfly_scan_hash_entry,
    pub entry_count: usize,
}

impl Default for antfly_scan_hash_result {
    fn default() -> Self {
        antfly_scan_hash_result {
            entries_ptr: std::ptr::null_mut(),
            entry_count: 0,
        }
    }
}

// ---------------------------------------------------------------------
// extern "C" functions -- order matches antfly.h
// ---------------------------------------------------------------------

unsafe extern "C" {
    pub fn antfly_abi_version() -> u32;
    pub fn antfly_open_options_size() -> u32;
    pub fn antfly_error_code_name(code: antfly_error_code) -> *const c_char;
    pub fn antfly_error_code_description(code: antfly_error_code) -> *const c_char;
    pub fn antfly_open_options_init(options: *mut antfly_open_options) -> antfly_error_code;

    pub fn antfly_threading_mode() -> u32;

    pub fn antfly_db_open(path: *const c_char, out_db: *mut *mut antfly_db) -> antfly_error_code;
    pub fn antfly_db_open_with_options(
        path: *const c_char,
        options: *const antfly_open_options,
        out_db: *mut *mut antfly_db,
    ) -> antfly_error_code;
    pub fn antfly_db_create_with_options(
        path: *const c_char,
        options: *const antfly_open_options,
        out_db: *mut *mut antfly_db,
    ) -> antfly_error_code;
    pub fn antfly_db_close(db: *mut antfly_db);

    pub fn antfly_lite_open(path: *const c_char, out_db: *mut *mut antfly_db) -> antfly_error_code;
    pub fn antfly_lite_create(
        path: *const c_char,
        out_db: *mut *mut antfly_db,
    ) -> antfly_error_code;
    pub fn antfly_lite_open_hosted(
        path: *const c_char,
        out_db: *mut *mut antfly_db,
    ) -> antfly_error_code;
    pub fn antfly_lite_create_hosted(
        path: *const c_char,
        out_db: *mut *mut antfly_db,
    ) -> antfly_error_code;
    pub fn antfly_lite_open_readonly(
        path: *const c_char,
        out_db: *mut *mut antfly_db,
    ) -> antfly_error_code;
    pub fn antfly_lite_open_status_only(
        path: *const c_char,
        out_db: *mut *mut antfly_db,
    ) -> antfly_error_code;

    pub fn antfly_db_status_json(db: *mut antfly_db, out: *mut antfly_buffer) -> antfly_error_code;
    pub fn antfly_db_capabilities_json(
        db: *mut antfly_db,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;

    pub fn antfly_db_backup(db: *mut antfly_db, out: *mut antfly_buffer) -> antfly_error_code;
    pub fn antfly_db_import_backup(db: *mut antfly_db, backup: antfly_slice) -> antfly_error_code;
    pub fn antfly_restore_backup_json(
        dest_path: *const c_char,
        options: *const antfly_open_options,
        backup: antfly_slice,
        replace: bool,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_restore_backup_file_json(
        dest_path: *const c_char,
        options: *const antfly_open_options,
        backup_path: *const c_char,
        replace: bool,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;

    pub fn antfly_lite_check_json(db: *mut antfly_db, out: *mut antfly_buffer)
    -> antfly_error_code;
    pub fn antfly_lite_check_file_json(
        path: *const c_char,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_lite_copy_stable_snapshot_json(
        db: *mut antfly_db,
        dest_path: *const c_char,
        replace: bool,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_lite_copy_stable_snapshot_file_json(
        src_path: *const c_char,
        dest_path: *const c_char,
        replace: bool,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_lite_compact_json(
        db: *mut antfly_db,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;
    pub fn antfly_lite_vacuum_json(
        db: *mut antfly_db,
        out: *mut antfly_buffer,
    ) -> antfly_error_code;

    pub fn antfly_buffer_free(buffer: *mut antfly_buffer);
    pub fn antfly_buffer_free_zero(buffer: *mut antfly_buffer);
    pub fn antfly_dense_search_result_free(result: *mut antfly_dense_search_result);
    pub fn antfly_packed_dense_search_result_free(result: *mut antfly_packed_dense_search_result);
    pub fn antfly_scan_hash_result_free(result: *mut antfly_scan_hash_result);
